--- a/src/scss/home/theme/defualt-theme.scss
+++ b/src/scss/home/theme/defualt-theme.scss
@@ -30,7 +30,7 @@
       rgba(121, 9, 28, 1) 52%,
       rgba(25, 0, 255, 1) 96%
     );
-    --background-modal: linear-gradient(to right, #c31432, #240b36);
+    --background-modal: linear-gradient(to right, #3f0e16, #0b0f36);
     --color-modal: rgb(255, 255, 255);
     --color-note: rgb(190, 186, 186);
     --background-close-btn: linear-gradient(
