--- a/src/css/profile/home.css
+++ b/src/css/profile/home.css
@@ -1,7 +1,26 @@
+@keyframes fadedProfile-PC {
+  from {
+    opacity: 0;
+    height: 0; }
+  to {
+    opacity: 1;
+    height: 100vh; } }
+
 .user-profile {
   background: url("https://wallpaperaccess.com/full/3136252.jpg");
   width: 100vw;
   height: 100vh; }
+
+.user-modify-loading {
+  z-index: 1;
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  line-height: 100vh;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.671);
+  color: white;
+  font-size: 40px; }
 
 .user-profile-container {
   border-radius: 2rem;
@@ -9,7 +28,8 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.911);
   color: white;
-  margin: auto; }
+  margin: auto;
+  animation: fadedProfile-PC 1s ease-in-out; }
   .user-profile-container .user-profile-info {
     border-radius: 2rem;
     position: relative;
@@ -43,24 +63,40 @@
       left: 15rem;
       font-size: 1.5em;
       font-weight: 700;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       padding: 2px 10px;
       border-radius: 1rem;
       background: rgba(0, 0, 0, 0.548); }
-    .user-profile-container .user-profile-info .user-profile-container-user-name-input {
+    .user-profile-container .user-profile-info .user-full-name-input {
       position: absolute;
       font-weight: 700;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       top: 5rem;
       left: 15rem; }
-      .user-profile-container .user-profile-info .user-profile-container-user-name-input input[type=text] {
+      .user-profile-container .user-profile-info .user-full-name-input input[type="text"] {
         background: rgba(0, 0, 0, 0.548);
         border-top-color: transparent;
         border-left-color: transparent;
         border-right-color: transparent;
         color: white;
         font-size: 1.5em;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 700;
+        letter-spacing: 1px; }
+    .user-profile-container .user-profile-info .user-name-input {
+      position: absolute;
+      font-weight: 700;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      top: 8rem;
+      left: 15rem; }
+      .user-profile-container .user-profile-info .user-name-input input[type="text"] {
+        background: rgba(0, 0, 0, 0.548);
+        border-top-color: transparent;
+        border-left-color: transparent;
+        border-right-color: transparent;
+        color: white;
+        font-size: 1.2em;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         font-weight: 700;
         letter-spacing: 1px; }
     .user-profile-container .user-profile-info h5 {
@@ -86,3 +122,59 @@
         text-align: center; }
         .user-profile-container .user-profile-info .user-profile-follow-container div div {
           width: 100%; }
+  .user-profile-container .user-profile-overview {
+    overflow-y: auto;
+    height: 70%; }
+    .user-profile-container .user-profile-overview .overview-songs {
+      width: 100%;
+      height: 60%;
+      padding: 30px; }
+      .user-profile-container .user-profile-overview .overview-songs h5 {
+        font-family: cursive;
+        font-size: 1.5em; }
+      .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container,
+      .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container {
+        display: flex;
+        width: 100%;
+        margin: 10px 0;
+        overflow-y: auto;
+        overflow-x: auto; }
+        .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-song,
+        .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-song {
+          min-width: 20%; }
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-song img,
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-song img {
+            width: calc(14vw);
+            height: calc(14vw);
+            margin: 0 5%;
+            border-radius: 2rem; }
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-song .song-name,
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-song .song-name {
+            margin-left: 15px;
+            font-size: 1.2rem; }
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-song .song-artists,
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-song .song-artists {
+            margin-left: 15px;
+            font-size: 0.7rem; }
+        .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist,
+        .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist {
+          min-width: 20%;
+          min-height: calc(14vw + 50px);
+          padding: 15px; }
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .overview-playlist-thumbnail,
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .overview-playlist-thumbnail {
+            min-width: 20%;
+            height: calc(14vw);
+            background-color: rgba(51, 51, 51, 0.397); }
+            .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .overview-playlist-thumbnail img,
+            .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .overview-playlist-thumbnail img {
+              width: 50%;
+              padding: 2.5px; }
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .song-name,
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .song-name {
+            margin-left: 15px;
+            font-size: 1rem; }
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .song-artists,
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .song-artists {
+            margin-left: 15px;
+            font-size: 0.5rem; }
