--- a/src/scss/profile/home.scss
+++ b/src/scss/profile/home.scss
@@ -1,7 +1,30 @@
+@keyframes fadedProfile-PC {
+  from {
+    opacity: 0;
+    height: 0;
+  }
+  to {
+    opacity: 1;
+    height: 100vh;
+  }
+}
+
 .user-profile {
   background: url("https://wallpaperaccess.com/full/3136252.jpg");
   width: 100vw;
   height: 100vh;
+}
+
+.user-modify-loading {
+  z-index: 1;
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  line-height: 100vh;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.671);
+  color: white;
+  font-size: 40px;
 }
 
 .user-profile-container {
@@ -11,6 +34,7 @@
   background-color: rgba(0, 0, 0, 0.911);
   color: white;
   margin: auto;
+  animation: fadedProfile-PC 1s ease-in-out;
   .user-profile-info {
     border-radius: 2rem;
     position: relative;
@@ -54,33 +78,49 @@
       left: 15rem;
       font-size: 1.5em;
       font-weight: 700;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       padding: 2px 10px;
       border-radius: 1rem;
       background: rgba(0, 0, 0, 0.548);
     }
-    
 
-
-    .user-profile-container-user-name-input {
+    .user-full-name-input {
       position: absolute;
       font-weight: 700;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       top: 5rem;
       left: 15rem;
-      input[type=text] {
+      input[type="text"] {
         background: rgba(0, 0, 0, 0.548);
         border-top-color: transparent;
         border-left-color: transparent;
         border-right-color: transparent;
         color: white;
         font-size: 1.5em;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         font-weight: 700;
         letter-spacing: 1px;
       }
     }
 
+    .user-name-input {
+      position: absolute;
+      font-weight: 700;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      top: 8rem;
+      left: 15rem;
+      input[type="text"] {
+        background: rgba(0, 0, 0, 0.548);
+        border-top-color: transparent;
+        border-left-color: transparent;
+        border-right-color: transparent;
+        color: white;
+        font-size: 1.2em;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 700;
+        letter-spacing: 1px;
+      }
+    }
 
     h5 {
       position: absolute;
@@ -107,6 +147,75 @@
         text-align: center;
         div {
           width: 100%;
+        }
+      }
+    }
+  }
+
+  .user-profile-overview {
+    overflow-y: auto;
+    height: 70%;
+    .overview-songs {
+      width: 100%;
+      height: 60%;
+      padding: 30px;
+      h5 {
+        font-family: cursive;
+        font-size: 1.5em;
+      }
+      .overview-user-songs-container,
+      .overview-user-playlist-container {
+        display: flex;
+        width: 100%;
+        margin: 10px 0;
+        overflow-y: auto;
+        overflow-x: auto;
+        // overflow-x: hidden;
+
+        .overview-user-song {
+          min-width: 20%;
+          // overflow-y: auto;
+          img {
+            width: calc(14vw);
+            height: calc(14vw);
+            margin: 0 5%;
+            border-radius: 2rem;
+          }
+          .song-name {
+            margin-left: 15px;
+            font-size: 1.2rem;
+          }
+          .song-artists {
+            margin-left: 15px;
+            font-size: 0.7rem;
+          }
+        }
+
+        .overview-user-playlist {
+          min-width: 20%;
+          min-height: calc(14vw + 50px);
+          padding: 15px;
+          // border-radius: 2rem;
+          // overflow-y: auto;
+          .overview-playlist-thumbnail {
+            min-width: 20%;
+            height: calc(14vw);
+            background-color: rgba(51, 51, 51, 0.397);
+           
+            img {
+              width: 50%;
+              padding: 2.5px;
+              // border-radius: 2rem;
+            }
+          }
+          .song-name {
+            margin-left: 15px;
+            font-size: 1rem;
+          }
+          .song-artists {
+            margin-left: 15px;
+            font-size: 0.5rem;
+          }
         }
       }
     }
