--- a/src/css/App.css
+++ b/src/css/App.css
@@ -195,6 +195,14 @@
     opacity: 1;
     height: 100vh; } }
 
+@keyframes fadedOverviewSongs-PC {
+  from {
+    opacity: 0;
+    height: 0; }
+  to {
+    opacity: 1;
+    height: 70%; } }
+
 .user-profile {
   background: url("https://wallpaperaccess.com/full/3136252.jpg");
   width: 100vw;
@@ -315,6 +323,7 @@
     overflow-y: auto;
     height: 70%; }
     .user-profile-container .user-profile-overview .overview-songs {
+      animation: fadedOverviewSongs-PC 1s ease-in-out;
       width: 100%;
       height: 60%;
       padding: 30px; }
@@ -362,11 +371,11 @@
           .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .song-name,
           .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .song-name {
             margin-left: 15px;
-            font-size: 1rem; }
+            font-size: 1.2rem; }
           .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .song-artists,
           .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .song-artists {
             margin-left: 15px;
-            font-size: 0.5rem; }
+            font-size: 0.7rem; }
 
 input {
   font-family: Verdana;
