--- a/src/scss/profile/home.scss
+++ b/src/scss/profile/home.scss
@@ -9,6 +9,18 @@
   }
 }
 
+@keyframes fadedOverviewSongs-PC {
+  from {
+    opacity: 0;
+    height: 0;
+  }
+  to {
+    opacity: 1;
+    height: 70%;
+  }
+}
+
+
 .user-profile {
   background: url("https://wallpaperaccess.com/full/3136252.jpg");
   width: 100vw;
@@ -156,6 +168,7 @@
     overflow-y: auto;
     height: 70%;
     .overview-songs {
+      animation: fadedOverviewSongs-PC 1s ease-in-out;
       width: 100%;
       height: 60%;
       padding: 30px;
@@ -210,11 +223,11 @@
           }
           .song-name {
             margin-left: 15px;
-            font-size: 1rem;
+            font-size: 1.2rem;
           }
           .song-artists {
             margin-left: 15px;
-            font-size: 0.5rem;
+            font-size: 0.7rem;
           }
         }
       }
