--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -74,6 +74,7 @@ input {
   background: var(--background-modal);
   color: var(--color-modal);
   border: none;
+  z-index: 100;
 }
 
 .custom-modal-01 .modal-dialog .modal-content span {
