--- a/src/css/App.css
+++ b/src/css/App.css
@@ -209,13 +209,15 @@
   height: 100vh; }
 
 .user-modify-loading {
-  z-index: 1;
-  position: absolute;
+  z-index: 10000;
+  position: fixed;
+  top: 0;
+  left: 0;
   height: 100vh;
   width: 100vw;
   line-height: 100vh;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.671);
+  background-color: rgba(0, 0, 0, 0.70022);
   color: white;
   font-size: 40px; }
 
@@ -363,11 +365,13 @@
           .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .overview-playlist-thumbnail {
             min-width: 20%;
             height: calc(14vw);
-            background-color: rgba(51, 51, 51, 0.397); }
+            background-color: rgba(85, 58, 58, 0.397);
+            border-radius: 2rem; }
             .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .overview-playlist-thumbnail img,
             .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .overview-playlist-thumbnail img {
               width: 50%;
-              padding: 2.5px; }
+              padding: 2.5px;
+              border-radius: 2rem; }
           .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .song-name,
           .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .song-name {
             margin-left: 15px;
@@ -430,7 +434,8 @@ input {
 .custom-modal-01 .modal-dialog .modal-content {
   background: var(--background-modal);
   color: var(--color-modal);
-  border: none; }
+  border: none;
+  z-index: 100; }
 
 .custom-modal-01 .modal-dialog .modal-content span {
   color: var(--color-note); }
@@ -789,7 +794,7 @@ html {
   position: absolute;
   margin: auto;
   background: var(--background-btn-play);
-  animation: fromVolume4ToVolume0 1s ease;
+  animation: fromVolume4ToVolume0 0.8s ease-in-out;
   width: 42px;
   height: 42px;
   border-radius: 50%; }
@@ -798,7 +803,7 @@ html {
   position: absolute;
   margin: auto;
   background: var(--background-btn-play);
-  animation: fromVolume0ToVolume1 1s ease;
+  animation: fromVolume0ToVolume1 0.8s ease-in-out;
   top: 5px;
   left: 5px;
   width: 0px;
@@ -809,7 +814,7 @@ html {
   position: absolute;
   margin: auto;
   background: var(--background-btn-play);
-  animation: fromVolume1ToVolume2 1s ease;
+  animation: fromVolume1ToVolume2 0.8s ease-in-out;
   top: 4px;
   left: 4px;
   width: 32px;
@@ -820,7 +825,7 @@ html {
   position: absolute;
   margin: auto;
   background: var(--background-btn-play);
-  animation: fromVolume2ToVolume3 1s ease;
+  animation: fromVolume2ToVolume3 0.8s ease-in-out;
   top: 3px;
   left: 3px;
   width: 34px;
@@ -831,7 +836,7 @@ html {
   position: absolute;
   margin: auto;
   background: var(--background-btn-play);
-  animation: fromVolume3ToVolume4 1s ease;
+  animation: fromVolume3ToVolume4 0.8s ease-in-out;
   top: 2px;
   left: 2px;
   width: 36px;
