--- a/src/css/App.css
+++ b/src/css/App.css
@@ -203,6 +203,56 @@
     opacity: 1;
     height: 70%; } }
 
+.three-dot-user-profile {
+  position: relative; }
+  .three-dot-user-profile:hover {
+    color: #777474;
+    cursor: pointer; }
+
+.alert-error-box {
+  z-index: 2000;
+  position: fixed;
+  top: 90vh;
+  left: 1vw;
+  padding: 1vh;
+  width: 20vw;
+  height: 5vh;
+  background-color: #be4167;
+  border-radius: 0.5rem;
+  color: white;
+  border: none; }
+  .alert-error-box i {
+    display: flex;
+    height: 100%;
+    justify-self: center;
+    align-items: center;
+    float: right;
+    font-size: 1.3rem; }
+    .alert-error-box i:hover {
+      color: #d8d8d8;
+      cursor: pointer; }
+
+.playlist-overview {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 100px;
+  background-color: rgba(0, 0, 0, 0.473); }
+  .playlist-overview .playlist-song-count-overview {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 0;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.89);
+    border-radius: 1rem;
+    line-height: 80px;
+    margin: 10px; }
+  .playlist-overview .playlist-name-overview {
+    position: absolute;
+    left: 120px;
+    top: 10px; }
+
 .custom-modal-add-playlist .modal-content {
   margin-top: 30vh;
   font-family: Verdana;
@@ -367,8 +417,11 @@
       height: 65%;
       padding: 30px 20px; }
       .user-profile-container .user-profile-overview .overview-songs h5 {
-        font-family: cursive;
-        font-size: 1.5em; }
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 1.3em;
+        font-weight: bold;
+        padding-left: 15px;
+        padding-bottom: 10px; }
       .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container,
       .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container {
         display: flex;
@@ -384,7 +437,7 @@
             width: calc(14vw);
             height: calc(14vw);
             margin: 0 5%;
-            border-radius: 2rem; }
+            border-radius: 1rem; }
             .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-song img:hover,
             .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-song img:hover {
               cursor: pointer;
@@ -400,7 +453,7 @@
         .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist,
         .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist {
           max-width: 20%;
-          padding: 15px;
+          padding: 0 15px;
           min-height: calc(14vw); }
           .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .overview-playlist-thumbnail,
           .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .overview-playlist-thumbnail {
@@ -448,14 +501,21 @@
             .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .overview-playlist-thumbnail:hover {
               cursor: pointer;
               opacity: 0.88; }
-          .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .song-name,
-          .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .song-name {
-            margin-left: 15px;
-            font-size: 1.2rem; }
-          .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .song-artists,
-          .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .song-artists {
-            margin-left: 15px;
-            font-size: 0.7rem; }
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .playlist-detail,
+          .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .playlist-detail {
+            min-height: 55px; }
+            .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .playlist-detail .song-name,
+            .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .playlist-detail .song-name {
+              margin-left: 15px;
+              font-size: 1.2rem; }
+              .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .playlist-detail .song-name i,
+              .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .playlist-detail .song-name i {
+                float: right;
+                line-height: 30px; }
+            .user-profile-container .user-profile-overview .overview-songs .overview-user-songs-container .overview-user-playlist .playlist-detail .song-artists,
+            .user-profile-container .user-profile-overview .overview-songs .overview-user-playlist-container .overview-user-playlist .playlist-detail .song-artists {
+              margin-left: 15px;
+              font-size: 0.7rem; }
 
 input {
   font-family: Verdana;
@@ -777,7 +837,7 @@ html {
   position: absolute;
   top: 58%;
   right: 5px;
-  z-index: 0; }
+  z-index: 6; }
 
 .show-option-songs {
   visibility: visible; }
