--- a/src/scss/profile/home.scss
+++ b/src/scss/profile/home.scss
@@ -20,6 +20,65 @@
   }
 }
 
+
+.three-dot-user-profile{
+  position: relative;
+  &:hover{
+    color: rgb(119, 116, 116);
+    cursor: pointer;
+  }
+}
+
+.alert-error-box{
+  z-index: 2000;
+  position: fixed;
+  top: 90vh;
+  left: 1vw;
+  padding: 1vh;
+  width: 20vw;
+  height: 5vh;
+  background-color: rgb(190, 65, 103);
+  border-radius: 0.5rem;
+  color: white;
+  border: none;
+  i{
+    display: flex;
+    height: 100%;
+    justify-self: center;
+    align-items: center;
+    float: right;
+    font-size: 1.3rem;
+    &:hover{
+      color: rgb(216, 216, 216);
+      cursor: pointer;
+    }
+  }
+}
+
+.playlist-overview{
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 100px;
+  background-color: rgba(0, 0, 0, 0.473);
+  .playlist-song-count-overview{
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 0;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.89);
+    border-radius: 1rem;
+    line-height: 80px;
+    margin: 10px;
+  }
+  .playlist-name-overview{
+    position: absolute;
+    left: 120px;
+    top: 10px;
+  }
+}
+
 .custom-modal-add-playlist {
   .modal-content {
     margin-top: 30vh;
@@ -233,8 +292,11 @@
       height: 65%;
       padding: 30px 20px;
       h5 {
-        font-family: cursive;
-        font-size: 1.5em;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 1.3em;
+        font-weight: bold;
+        padding-left: 15px;
+        padding-bottom: 10px;
       }
       .overview-user-songs-container,
       .overview-user-playlist-container {
@@ -251,7 +313,7 @@
             width: calc(14vw);
             height: calc(14vw);
             margin: 0 5%;
-            border-radius: 2rem;
+            border-radius: 1rem;
             &:hover {
               cursor: pointer;
               opacity: 0.88;
@@ -269,7 +331,7 @@
 
         .overview-user-playlist {
           max-width: 20%;
-          padding: 15px;
+          padding: 0 15px;
           min-height: calc(14vw);
           // border-radius: 2rem;
           // overflow-y: auto;
@@ -323,13 +385,20 @@
               opacity: 0.88;
             }
           }
-          .song-name {
-            margin-left: 15px;
-            font-size: 1.2rem;
-          }
-          .song-artists {
-            margin-left: 15px;
-            font-size: 0.7rem;
+          .playlist-detail{
+            min-height: 55px;
+            .song-name {
+              margin-left: 15px;
+              font-size: 1.2rem;
+              i{
+                float: right;
+                line-height: 30px;
+              }
+            }
+            .song-artists {
+              margin-left: 15px;
+              font-size: 0.7rem;
+            }
           }
         }
       }
